feat: Added notification system and improved prompt handling and updated ReadME.md file

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,8 @@
       <div class="divider"></div>
       <div class="action-text">INTERACT</div>
     </div>
+    <!-- Notifications Container -->
+    <div id="notifications-container"></div>
     <script src="script.js"></script>
   </body>
 </html>
